sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:21: error: ';' expected but 'while' found.
  } while (ecart>1)
    ^AlgCombSort:23: error: 'while' expected but '}' found.
} 
^